server/webapps/dashboard/css/style.css
/* ... */
/* Only demo */
@media (max-width: 1000px) {
    .welcome-message {
        display: none;
    }
}

.center {
    text-align: center;
}

/* Dashboard App Listing */
.app-listing {
    position: relative;
    top: 3em;
}

.app-sort-bar .search i {
    color: #303030;
    position: absolute;
    top: 6px;
    right: 22px;
    cursor: pointer;
}

.app-sort-bar .sort i {
    color: #fff;
}

.cloud-app-listing {
    width: 100%;
    position: relative;
    margin-bottom: 2em;
    cursor: pointer;
}

.cloud-app-listing i {
    position: absolute;
    z-index: 98;
    right: 0px;
    padding: 6px;
    background-color: rgba(249, 249, 249, 0);
    top: 0;
    color: #2F4050;
}

.app-thumb span {
    padding: 7px;
    background-color: #626262;
    border-radius: 19px;
    width: 33px;
    z-index: 99;
    position: absolute;
    left: 130px;
    top: 135px;
}

.app-thumb span i {
    padding-left: 4px;
}

.app-icon {
    border: none;
    margin: 0;
    background: #2c313b;
    color: #fff;
    text-align: center;
    position: relative;
    overflow: hidden;
}

.app-icon:before {
    display: block;
    content: "";
    width: 100%;
    padding-top: 100%;
}

.app-icon > .square-element {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.app-icon img {
    width: 100%;
}

.app-icon .square-element:before {
    position: absolute;
    top: 50%;
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    -o-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

.app-name {
    position: absolute;
    color: #fff;
    bottom: 0;
    padding: 9px 5px 2px;
    width: 100%;
    min-height: 3em;
    font-size: 13px;
    text-align: center;
    background-color: #2f4050;
    font-weight: 300;
}

.app-name i {
    position: relative;
}

.app-settings {
    position: absolute;
    bottom: 0;
    padding: 9px 5px 2px;
    right: 0;
    min-height: 3em;
    font-size: 13px;
    text-align: right;
    font-weight: 300;
}

.app-settings i {
    color: #FFFFFF;
}

.dataTables_filter {
    float: left;
}

.dataTables_filter .input-group-addon {
    width: 32px;
    margin-top: 0;
    float: left;
    height: 34px;
    padding-top: 8px;
    padding-right: 25px;
    margin-left: 5px;
}

.chart-wrapper {
    position: relative;
    padding-bottom: 40%;
}

.chart-inner {
    position: absolute;
    width: 100%;
    height: 100%;
}

.profile-image-container {
    width: 178px;
    height: 178px;
    margin: 0 auto;
    display:block;
    text-align:center;
    position: relative;
}

img.overlay {
    position: absolute;
    height: 178px;
    width: 178px;
    top: 0px;
    left: 0px;
}

.profile-image{
    z-index: 10 !important;
}

img.thumbnail  { position: absolute; width: 178px;height: 178px ;z-index: 20}

#thumbnail{
    float:left;
}


.fileupload{
    display: none;
    position: absolute;
    left: 0px;
    bottom: 0px;
    width: 178px;
    height: 40px;
    z-index: 200;
    background-color: #1ab394;
}

.inputfile {
    width: 178px;
    height: 40px;
    opacity: 0;
    overflow: hidden;
    position: absolute;
    z-index: -1;
}

.inputfile + label {
    width: 178px;
    height: 40px;
    padding: 5px;
    font-size: 1.0em;
    font-weight: 500;
    color: white;
    background-color: #1ab394;
    display: inline-block;
}

.inputfile:focus + label,
.inputfile + label:hover {
    background-color: black;
}

.inputfile + label {
    cursor: pointer; /* "hand" cursor */
}
.inputfile:focus + label {
    outline: 1px dotted #000;
    outline: -webkit-focus-ring-color auto 5px;
}

.password-reset-container{
    left: 50px;
    position: relative;
}

#dashboard-tabs .tab-content {
    padding : 10px 15px;
}

